--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,12 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name="com.guessthegame.GamesList"
-            android:label="@string/title_activity_games_list" 
+            android:label="@string/title_activity_games_list"
             android:parentActivityName="com.guessthegame.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -38,6 +38,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.guessthegame.GamesList" />
         </activity>
+
     </application>
 
 </manifest>
