--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name="com.guessthegame.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +27,8 @@
         <activity
             android:name="com.guessthegame.GamesList"
             android:label="@string/title_activity_games_list"
-            android:parentActivityName="com.guessthegame.MainActivity" >
+            android:parentActivityName="com.guessthegame.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.guessthegame.MainActivity" />
@@ -33,7 +36,10 @@
         <activity
             android:name="com.guessthegame.Game"
             android:label="@string/title_activity_game"
-            android:parentActivityName="com.guessthegame.GamesList" >
+            android:parentActivityName="com.guessthegame.GamesList" 
+            android:windowSoftInputMode="stateAlwaysVisible|adjustResize"
+            android:screenOrientation="portrait"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.guessthegame.GamesList" />
