--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-17
 android.library.reference.1=../../Documents/workspace/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
 android.library.reference.2=../ShowcaseView/library
+android.library.reference.3=../../../../Applications/facebook-android-sdk-3.0.1/facebook
