--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.guessthegame.MainActivity"
             android:label="@string/app_name"
@@ -36,13 +36,30 @@
         <activity
             android:name="com.guessthegame.Game"
             android:label="@string/title_activity_game"
-            android:parentActivityName="com.guessthegame.GamesList" 
-            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:parentActivityName="com.guessthegame.GamesList"
             android:screenOrientation="portrait"
-            >
+            android:windowSoftInputMode="stateHidden|adjustResize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.guessthegame.GamesList" />
+        </activity>
+        
+        <activity
+            android:name="com.guessthegame.FacebookPost"
+            android:label="@string/title_activity_game"
+            android:parentActivityName="com.guessthegame.FacebookPost"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.guessthegame.Game" />
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity android:name="com.facebook.LoginActivity" >
         </activity>
 
     </application>
