--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,9 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -58,7 +59,10 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-
+		
+        <meta-data android:name="com.google.android.gms.appstate.APP_ID"
+        android:value="@string/app_id" />
+        
         <activity android:name="com.facebook.LoginActivity" >
         </activity>
 
